#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
MD-2009-09-18-0: Bugfix:     IZ 2254 failed, due a existing reference to a 
                             complex in a rqs -> cleanup func failed
                 Review:     JG

AP-2009-09-16-1: Bugfix:     fixing procedure get_test_count
                 Belongs to: AP-2009-09-16-0

AP-2009-09-16-0: Enhancem.:  o Adding auto installation test, basic test enhancement.
                             o Removing CHECK_CORE_SHADOWD global variable
                 Review:     LP

TB-2009-09-11-0: Bugfix:     Rolled back change to parse_table_output function
                 Belongs to: LP-2009-09-10-0
                 Review:     RH

LP-2009-09-10-1: Bugfix:     Invalid array reference
                 Belongs to: LP-2009-09-10-0
                 Review:     TBD

LP-2009-09-10-0: Bugfix:     Hedeby TS cannot run with SDM 1.0u3
                 Enhancem.:  Minor updated for the hudson_reports
                 Enhancem.:  Added 99 state for some tests
                 Bugfix:     Marked 2 old tests as VERIFIED
                 Enhancem.:  tight_integration test speedup when failure occurs
                 Enhancem.:  Added support for a new JMX message that will
                             appear in 6.2u5
                 Enhancem.:  Increased timeout for restart scenario of the SMF
                             test
                 Review:     RH

JG-2009-09-04-0: Bugfix:     qstat test_issue123 failed from time to time
                 Review:     MD

SH-2009-08-27-0: Bugfix:     Usage test aborts with tcl-error
                 Belongs to: CR-2009-08-10-0