@@ -793,8 +793,8 @@ proc qrsh_accounting {} {
       if {$job_id != ""} {
          if {[get_qacct $job_id qacct_info $ts_config(master_host)] == 0} {
             set cpu [expr $qacct_info(ru_utime) + $qacct_info(ru_stime)]
-            # we allow 1 second loose at startup/end of job. We calculate error tolerance
-            set my_allowed_cpu_value [expr ( $job_run_time * ( ( $job_run_time - 2.0 ) / $job_run_time ) )]
+            # the machine might be busy, so we might not get the cpu for the whole runtime
+            set my_allowed_cpu_value [expr $job_run_time - 10.0]
 
             ts_log_fine "cpu entry: $cpu should be >= $my_allowed_cpu_value"
             if {$cpu < $my_allowed_cpu_value} {
@@ -802,7 +802,7 @@ proc qrsh_accounting {} {
                append help_text "is a worker with runtime = $job_run_time\nI expected at least a runtime of\n"
                append help_text "$my_allowed_cpu_value seconds!\n"
                append help_text "This might happen on virtual hosts which report wrong wallclock time!\n"
-               ts_log_warning $help_text
+               ts_log_info $help_text
             }
 
             if {$cpu < 30} {
