@@ -6,6 +6,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+JG-2009-09-18-0: Bugfix:     pe_ranges test failed due to wrong order in
+                             cleanup (same issue as with IZ 2254 test)
+                 Cleanup:    Fixed an ADOC warning, made qrsh test more fault
+                             tolerant.
+                 Review:     CR
+
 MD-2009-09-18-0: Bugfix:     IZ 2254 failed, due a existing reference to a 
                              complex in a rqs -> cleanup func failed
                  Review:     JG
